--- a/src/Osu.Music.UI/Resources/Dictionaries/Buttons.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Buttons.xaml
@@ -362,7 +362,7 @@
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Foreground" Value="{DynamicResource SolidColorBrushMain}"/>
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="FontFamily" Value="Roboto"/>
+        <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
         <Setter Property="FontWeight" Value="Normal"/>
         <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True"/>
         <Setter Property="Template">
@@ -399,7 +399,7 @@
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Foreground" Value="{DynamicResource SolidColorBrushMain}"/>
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="FontFamily" Value="{DynamicResource Roboto}"/>
+        <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
         <Setter Property="FontWeight" Value="Normal"/>
         <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True"/>
         <Setter Property="Template">
@@ -435,7 +435,7 @@
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Background" Value="{DynamicResource SolidColorBrushMain}"/>
         <Setter Property="Foreground" Value="White"/>
-        <Setter Property="FontFamily" Value="Roboto"/>
+        <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
         <Setter Property="FontWeight" Value="Normal"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -732,7 +732,7 @@
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="Gray"/>
 
-        <Setter Property="FontFamily" Value="{DynamicResource Roboto}"/>
+        <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
         <Setter Property="FontWeight" Value="DemiBold"/>
         <Setter Property="FontSize" Value="16"/>
 
