--- a/src/Osu.Music.UI/Resources/Dictionaries/Texts.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Texts.xaml
@@ -21,7 +21,7 @@
 
     <Style x:Key="MenuDefault" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="FontFamily" Value="Roboto"/>
+        <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
     </Style>
 
     <Style x:Key="LinkText" TargetType="{x:Type TextBlock}">
@@ -44,7 +44,7 @@
     </Style>
 
     <Style x:Key="SearchText" TargetType="{x:Type TextBox}">
-        <Setter Property="FontFamily" Value="{DynamicResource Roboto}"/>
+        <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="Foreground" Value="{DynamicResource SolidColorBrushMain}"/>
         <Setter Property="HorizontalAlignment" Value="Right"/>
