--- a/src/Osu.Music.UI/Views/SearchView.xaml
+++ b/src/Osu.Music.UI/Views/SearchView.xaml
@@ -22,7 +22,7 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="40"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock FontFamily="{DynamicResource Roboto}" Foreground="{DynamicResource SolidColorBrushMain}" 
+                    <TextBlock FontFamily="{DynamicResource Poppins}" Foreground="{DynamicResource SolidColorBrushMain}" 
                                FontSize="16" FontWeight="DemiBold" Margin="7 10 0 10" DockPanel.Dock="Left"
                                Text="Search"/>
                     <TextBox x:Name="SearchField" Style="{DynamicResource SearchText}" Text="{Binding Request, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" MinWidth="200">
