--- a/src/Osu.Music.UI/Resources/Dictionaries/ListViews.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/ListViews.xaml
@@ -1,18 +1,19 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:convert="clr-namespace:Osu.Music.UI.Resources.Converters">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="ListViewBeatmaps" TargetType="{x:Type ListView}">
         <Style.Resources>
             <Style x:Key="TitleStyle" TargetType="{x:Type TextBlock}">
                 <Setter Property="FontSize" Value="16"/>
                 <Setter Property="FontWeight" Value="Bold"/>
                 <Setter Property="Foreground" Value="White"/>
+                <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
             </Style>
 
             <Style x:Key="ArtistStyle" TargetType="{x:Type TextBlock}">
                 <Setter Property="FontSize" Value="14"/>
                 <Setter Property="FontWeight" Value="Regular"/>
                 <Setter Property="Foreground" Value="White"/>
+                <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
             </Style>
         </Style.Resources>
         <Setter Property="BorderThickness" Value="0"/>
