--- a/src/Osu.Music.UI/Resources/Dictionaries/ListViews.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/ListViews.xaml
@@ -15,6 +15,8 @@
                 <Setter Property="Foreground" Value="White"/>
                 <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
             </Style>
+
+            <SolidColorBrush x:Key="HoverBrush" Color="#10000000"/>
         </Style.Resources>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Padding" Value="0"/>
@@ -28,7 +30,9 @@
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type ListViewItem}">
-                                <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="true">
+                                <Border x:Name="Bd" BorderBrush="Transparent" BorderThickness="0" 
+                                        Background="{TemplateBinding Background}" SnapsToDevicePixels="true"
+                                        CornerRadius="5" Padding="5" Margin="2.5">
                                     <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                                 </Border>
                                 <ControlTemplate.Triggers>
@@ -36,26 +40,22 @@
                                         <MultiTrigger.Conditions>
                                             <Condition Property="IsMouseOver" Value="True"/>
                                         </MultiTrigger.Conditions>
-                                        <Setter Property="Background" TargetName="Bd" Value="White"/>
-                                        <Setter Property="BorderBrush" TargetName="Bd" Value="White"/>
+                                        <Setter Property="Background" TargetName="Bd" Value="{DynamicResource HoverBrush}"/>
                                     </MultiTrigger>
                                     <MultiTrigger>
                                         <MultiTrigger.Conditions>
                                             <Condition Property="Selector.IsSelectionActive" Value="False"/>
                                             <Condition Property="IsSelected" Value="True"/>
                                         </MultiTrigger.Conditions>
-                                        <Setter Property="Background" TargetName="Bd" Value="{DynamicResource SolidColorBrushMain}"/>
-                                        <Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource SolidColorBrushMain}"/>
-                                        <Setter Property="Foreground" Value="White"/>
+                                        <Setter Property="Background" TargetName="Bd" Value="{DynamicResource HoverBrush}"/>
                                     </MultiTrigger>
                                     <MultiTrigger>
                                         <MultiTrigger.Conditions>
                                             <Condition Property="Selector.IsSelectionActive" Value="True"/>
                                             <Condition Property="IsSelected" Value="True"/>
                                         </MultiTrigger.Conditions>
-                                        <Setter Property="Background" TargetName="Bd" Value="{DynamicResource SolidColorBrushMain}"/>
-                                        <Setter Property="BorderBrush" TargetName="Bd" Value="{DynamicResource SolidColorBrushMain}"/>
-                                        <Setter Property="Foreground" Value="White"/>
+                                        <Setter Property="Background" TargetName="Bd" Value="{DynamicResource HoverBrush}"/>
+ 
                                     </MultiTrigger>
                                 </ControlTemplate.Triggers>
                             </ControlTemplate>
