--- a/src/Osu.Music.UI/Resources/Dictionaries/ListViews.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/ListViews.xaml
@@ -3,14 +3,14 @@
     <Style x:Key="ListViewBeatmaps" TargetType="{x:Type ListView}">
         <Style.Resources>
             <Style x:Key="TitleStyle" TargetType="{x:Type TextBlock}">
-                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="FontSize" Value="12"/>
                 <Setter Property="FontWeight" Value="Bold"/>
                 <Setter Property="Foreground" Value="White"/>
                 <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
             </Style>
 
             <Style x:Key="ArtistStyle" TargetType="{x:Type TextBlock}">
-                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="FontSize" Value="12"/>
                 <Setter Property="FontWeight" Value="Regular"/>
                 <Setter Property="Foreground" Value="White"/>
                 <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
@@ -32,7 +32,7 @@
                             <ControlTemplate TargetType="{x:Type ListViewItem}">
                                 <Border x:Name="Bd" BorderBrush="Transparent" BorderThickness="0" 
                                         Background="{TemplateBinding Background}" SnapsToDevicePixels="true"
-                                        CornerRadius="5" Padding="5" Margin="2.5">
+                                        CornerRadius="5" Margin="2.5">
                                     <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                                 </Border>
                                 <ControlTemplate.Triggers>
