--- a/src/Osu.Music.UI/Resources/Dictionaries/Texts.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Texts.xaml
@@ -46,34 +46,30 @@
         <Setter Property="FontSize" Value="16"/>
     </Style>
 
-    <Style x:Key="SearchText" TargetType="{x:Type TextBox}">
+    <Style x:Key="SearchTextBox" TargetType="{x:Type TextBox}">
+        <Style.Resources>
+            <VisualBrush x:Key="SearchHint" TileMode="None" Stretch="None" AlignmentX="Left">
+                <VisualBrush.Transform>
+                    <TranslateTransform X="2" Y="0" />
+                </VisualBrush.Transform>
+                <VisualBrush.Visual>
+                    <Grid>
+                        <TextBlock Opacity="0.3" Text="Search"/>
+                    </Grid>
+                </VisualBrush.Visual>
+            </VisualBrush>
+        </Style.Resources>
         <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="Foreground" Value="{DynamicResource SolidColorBrushMain}"/>
-        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="BorderThickness" Value="0 0 0 1"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource SolidColorBrushMainBorder}"/>
-
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
-                        <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsEnabled" Value="false">
-                            <Setter Property="Opacity" TargetName="border" Value="0.56"/>
-                        </Trigger>
-                        <Trigger Property="IsMouseOver" Value="true">
-                            <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource SolidColorBrushMainLight}"/>
-                        </Trigger>
-                        <Trigger Property="IsFocused" Value="true">
-                            <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource SolidColorBrushMain}"/>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Background" Value="Transparent"/>
+        
+        <Style.Triggers>
+            <Trigger Property="Text" Value="">
+                <Setter Property="Background" Value="{StaticResource SearchHint}"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
