--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -75,6 +75,13 @@
                     <RadioButton Style="{DynamicResource SidebarButtonAllSongs}" Command="{Binding OpenPageCommand}" CommandParameter="SongsView" IsChecked="True"/>
                     <RadioButton Style="{DynamicResource SidebarButtonPlaylists}" Command="{Binding OpenPageCommand}" CommandParameter="PlaylistsView"/>
                     <RadioButton Style="{DynamicResource SidebarButtonCollection}" Command="{Binding OpenPageCommand}" CommandParameter="CollectionsView"/>
+                    <Border HorizontalAlignment="Stretch" CornerRadius="20" Background="#20000000" Margin="5" Height="40">
+                        <DockPanel>
+                            <TextBlock FontFamily="{DynamicResource MaterialIcons}" Text="&#xe8b6;" FontSize="20" Foreground="#50000000" VerticalAlignment="Center"
+                                       Margin="5 0 0 0"/>
+                            <TextBox Style="{DynamicResource SearchTextBox}" Margin="7 0 0 0"/>
+                        </DockPanel>
+                    </Border>
                 </StackPanel>
 
                 <ContentPresenter x:Name="contentPresenter" Grid.Row="1" Content="{Binding Visualization.Content}"/>
